Fix font size on mobile

--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -18,4 +18,7 @@
       }
     }
   }
+  .subsection {
+    font-size: medium;
+  }
 }
